<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/sort_by"
        android:icon="@drawable/ic_sort"
        app:showAsAction="always" >

        <menu>
            <group
                android:checkableBehavior="single" >

                <item
                    android:checked="true"
                    android:id="@+id/menu_sort_popular"
                    android:icon="@drawable/ic_popular"
                    android:title="@string/most_popular" />
                <item
                    android:id="@+id/menu_sort_top_rated"
                    android:icon="@drawable/ic_top_rated"
                    android:title="@string/top_rated" />

            </group>
        </menu>

    </item>

</menu>