<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.github.itswisdomagain.popularmovies.MovieDetailActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:clipToPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/movie_poster_image_desc"
                android:id="@+id/imgMovieThumbnail"
                tools:src="@drawable/loading_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="vertical"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvMovieTitle"
                    tools:text="Movie Title"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvRating"
                    android:drawableLeft="@drawable/ic_star_half_black_24dp"
                    android:drawableStart="@drawable/ic_star_half_black_24dp"
                    tools:text="7.0"
                    android:gravity="center"
                    android:textSize="12sp"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvReleaseDate"
                    tools:text="Released 12 - 04 - 13"
                    android:gravity="bottom"
                    android:textSize="14sp"
                    android:layout_gravity="end"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvSynopsisHeader"
            android:text="@string/plot_synopsis_header"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="6dp"
            android:textColor="#ffd600"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvMovieSynopsis"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            tools:text="@string/check_internet_prompt"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
